# backrest-mcp-server

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  ecosystem.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
backrest_mcp/: client.py  models.py  observability.py  safety.py  server.py
src/: index.ts
tests/: test_client.py  test_safety.py  test_tools.py
