[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backrest-mcp"
version = "0.2.1"
description = "FastMCP Python MCP server wrapping the Backrest backup manager REST API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0,<27.0",
]

[project.optional-dependencies]
influxdb = ["influxdb3-python"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.20",
]

[project.scripts]
backrest-mcp = "backrest_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backrest_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
